Correct overflow value to hidden

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ body {
 main {
     margin: 200px auto;
     width: 400px;
-    overflow: none;
+    overflow: hidden;
 }
 
 footer {
